actually fixes x-overflow issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -184,6 +184,7 @@ body,
 #___gatsby,
 #gatsby-focus-wrapper {
   height: 100%;
+  overflow-x: hidden;
 }
 
 #resume-page {
@@ -201,6 +202,10 @@ body,
 @media (max-width: 720px) {
   :root {
     --baseFontSize: 90%;
+  }
+
+  body {
+    overflow-x: hidden;
   }
 
   main {
